<resources>
    <string name="app_name">Anki</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_anki_swipe">AnkiSwipe</string>
    <string name="title_word_list">WordList</string>
    <string name="title_settings">Settings</string>
    <string name="hoge">hoge</string>
</resources>