<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_swipe_black_24dp"
        android:title="@string/title_anki_swipe" />

    <item
        android:id="@+id/navigation_word_list"
        android:icon="@drawable/ic_view_list_black_24dp"
        android:title="@string/title_word_list" />

    <item
        android:id="@+id/navigation_add_word"
        android:icon="@drawable/ic_add_circle_outline_black_24dp"
        android:title="@string/title_word_list" />

    <item
        android:id="@+id/navigation_analytics"
        android:icon="@drawable/ic_analytics_black_24dp"
        android:title="@string/title_word_list" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_settings" />

</menu>